--- a/css/Style.css
+++ b/css/Style.css
@@ -1,21 +1,21 @@
 body{
-	font-family: PT Sans Bold;
-	font-weight:Bold;
+	font-family:PT Sans;
+	font-weight:bold;
 	font-size:14px;
 	line-height:26px;
-	color:000000;
+	color:#000000;
 	text-transform:uppercase;
 }
 b{
-	font-family: PT Sans Bold;
-	font-weight:Bold;
+	font-family:PT Sans;
+	font-weight:bold;
 	font-size:21px;
 	line-height:21px;
-	color:ffffff;
+	color:#ffffff;
 	text-transform:uppercase;
 }
 span{
-	font-family: PT Sans Regular;
+	font-family:PT Sans Regular;
 	font-weight:Regular;
 	font-size:14px;
 	line-height:21px;
@@ -23,7 +23,7 @@ span{
 	text-transform:uppercase;
 }
 .container {
-	width: 1000px;
-	margin: 50px auto;
+	width:1200px;
+	margin:0 auto;
 	background-color:green;
 }
