--- a/css/Style.css
+++ b/css/Style.css
@@ -19,7 +19,7 @@ span{
 	font-weight:Regular;
 	font-size:14px;
 	line-height:21px;
-	color:000000;
+	color:#000000;
 	text-transform:uppercase;
 }
 .container {
