--- a/css/Style.css
+++ b/css/Style.css
@@ -28,7 +28,22 @@ span{
 	background-color:green;
 }
 header{
-	min-height:56px;
 	background-color:#ffffff;
-	
+}
+.clearfix::after {
+  content: "";
+
+  display: table;
+  clear: both;
+}
+.main-navigation{
+	min-height:56px;
+}
+.main-navigation li:nth-child(1), 
+.main-navigation li:nth-child(2){
+	float:left;
+}
+.main-navigation li:nth-child(3), 
+.main-navigation li:nth-child(4){
+	float:right;
 }
