--- a/css/Style.css
+++ b/css/Style.css
@@ -1,10 +1,12 @@
 body{
-	font-family:"PT Sans";
-	font-weight:bold;
+	font-family: 'PT Sans', sans-serif;
+	font-weight:normal;
 	font-size:14px;
 	line-height:26px;
 	color:#000000;
 	text-transform:uppercase;
+	padding:0px;
+	margin:0px;
 }
  p {
 	margin: 0;
