--- a/css/Style.css
+++ b/css/Style.css
@@ -1,5 +1,5 @@
 body{
-	font-family: 'PT Sans', sans-serif;
+	font-family:'PT Sans', 'Arial', sans-serif;
 	font-weight:normal;
 	font-size:14px;
 	line-height:26px;
