--- a/css/Style.css
+++ b/css/Style.css
@@ -8,6 +8,46 @@ body{
 	padding:0px;
 	margin:0px;
 }
+@font-face {
+  font-weight: normal;
+  font-style: normal;
+
+  font-family: "symbols-sedona";
+  src: url("../fonts/symbols-sedona.woff") format("woff"),
+       url("../fonts/symbols-sedona.woff2") format("woff2");
+}
+
+[class^="icon-"]::before,
+[class*=" icon-"]::before {
+  display: inline-block;
+  width: 1em;
+  margin-right: 0.2em;
+  margin-left: 0.2em;
+
+  font-weight: normal;
+  line-height: 1em;
+  font-family: "symbols-sedona";
+  text-align: center;
+  text-transform: none;
+  text-decoration: inherit;
+  font-style: normal;
+  font-variant: normal;
+
+  speak: none;
+}
+
+.icon-facebook::before { content: "\66"; } /* "f" */
+.icon-twitter::before { content: "\74"; } /* "t" */
+.icon-up-dir::before { content: "\25b2"; } /* "▲" */
+.icon-down-dir::before { content: "\25bc"; } /* "▼" */
+.icon-star::before { content: "\2605"; } /* "★" */
+.icon-check-off::before { content: "\2610"; } /* "☐" */
+.icon-check-on::before { content: "\2611"; } /* "☑" */
+.icon-calendar::before { content: "\e800"; } /* "" */
+.icon-plus::before { content: "\e801"; } /* "" */
+.icon-minus::before { content: "\e802"; } /* "" */
+.icon-youtube::before { content: "\f39e"; } /* "" */
+
  p {
 	margin: 0;
 	padding: 0;
@@ -28,7 +68,7 @@ img {
 .container {
 	width:1200px;
 	margin:0 auto;
-	background-color:#b7f7cc;
+	/* background-color:#b7f7cc; */
 }
 .index-header, .hotel-search-header{
 	background-color:#ffffff;
@@ -265,13 +305,56 @@ img {
 }
 
 .hotel-search-head{
-	min-height:291px;
+	box-sizing:border-box;
+	height:291px;
+	position:relative;
+	
+	padding-top:56px;
+	padding-bottom:96px;
+	padding-left:316px;
+	padding-right:316px;
+		
 	background-color:#ffffff;
 }
-.hotel-search-head b, .hotel-search-head a{
-	display:block;
+.hotel-search-head-name{
+	font-size:30px;
+	line-height:24px;
+	font-weight:bold;
+	
+	margin-bottom:30px;
 }
-.hotel-search-head b, .hotel-search-head a, .hotel-search-head p{
+.hotel-search-head-text{
+	font-size:14px;
+	line-height:24px;
+	
+}
+.hotel-search-head-btn{
+	position:absolute;
+	bottom:0;
+	
+	box-sizing:border-box;
+	width:568px;
+	height:86px;
+	
+	padding-top:30px;
+	padding-bottom:30px;
+	padding-left:84px;
+	padding-right:84px;
+	
+	background-color:#766357;
+	color:#FFFFFF;
+}
+.hotel-search-head a{
+	display:block;
+	text-decoration:none;
+	
+	font-size:21px;
+	line-height:26px;
+	font-weight:bold;
+	color:inherit;
+	
+}
+.hotel-search-head a, .hotel-search-head p{
 	text-align:center;
 }
 .hotel-search-form{
@@ -281,6 +364,7 @@ img {
 	margin-left:auto;
 	margin-right:auto;
 	background-color:#ffffff;
+	display:none;
 }
 .index-footer{
 	min-height:593px;
@@ -289,16 +373,76 @@ img {
 .map{
 	width:1200px;
 	height:593px;
+	position: absolute;
+	bottom:0;
 }
 .footer-container{
-/* 	min-height:120px; */
+
 	background-color:#fdfdfd;
 	opacity:0.9;
+	color:#FFFFFF;
+	
+	position:absolute;
+	bottom:0;
 }
 .footer-hashtag, .footer-social, .footer-copyright{
-	width:400px;
 	float:left;
+	box-sizing:border-box;
+	width:400px;
+	height: 120px;
+
+	text-align:center;
 }
+.footer-hashtag{
+	padding-top:46px;
+	padding-bottom:40px;
+}
+.footer-hashtag a{
+	display:inline-block;
+	vertical-align:top;
+
+	text-decoration:none;
+	
+	font-size:21px;
+	line-height:26px;
+	font-weight:bold;
+	color:#000000;
+}
+.footer-social{
+	padding-top:36px;
+	padding-bottom:36px;
+}
+.social-btn{
+	display:inline-block;
+	vertical-align:top;
+	width:46px;
+	height:48px;
+	font-size:0px;
+	background-color:#81b3d2;
+	position:relative;
+	color:#ffffff;
+	text-align:center;
+}
+.social-btn span{
+/* 	position:absolute; */
+	font-size:19px;
+	line-height:48px;
+}
+.footer-copyright{
+	padding-top:42px;
+	padding-bottom:25px;
+}
+.footer-copyright span{
+	display:inline-block;
+	vertical-align:top;
+	margin-top: 5px;
+	
+	
+	font-size:14px;
+	line-height:26px;
+	color:#000000;
+}
+
 .search-form{
 	min-height:217px;
 	background-image:url("../img/hotel_search_background.jpg");
