--- a/css/Style.css
+++ b/css/Style.css
@@ -8,6 +8,7 @@ body{
 	padding:0px;
 	margin:0px;
 }
+/* Иконочный шрифт */
 @font-face {
   font-weight: normal;
   font-style: normal;
@@ -48,27 +49,49 @@ body{
 .icon-minus::before { content: "\e802"; } /* "" */
 .icon-youtube::before { content: "\f39e"; } /* "" */
 
- p {
+/* "Сброс маргинов и паддингов" */
+p, h1, ul{
 	margin: 0;
 	padding: 0;
 }
-ul {
-	margin: 0;
-	padding: 0;
+ul{
 	list-style:none;
-}
-h1{
-	margin: 0;
-	padding: 0;
 }
 img {
   max-width: 100%;
   height: auto;
 }
+/* Стили кнопки */
+.btn{
+	color:#ffffff;
+	font-weight:bold;
+	font-size:14px;
+	line-height:21px;
+	font-family:"PT Sans", "Arial", sans-serif;
+	text-transform:uppercase;
+	text-decoration:none;
+	
+	background-color:#000000;
+	border:none;
+	outline:none;
+	cursor:pointer;
+	
+	display:inline-block;
+	vertical-align:top;
+	text-align:center;
+	
+	box-sizing:border-box;
+	padding-top:3px;
+	padding-bottom:3px;
+	padding-left:15px;
+	padding-right:15px;
+	
+	margin-right:3px;
+}
+/* Стили главной страницы */
 .container {
 	width:1200px;
 	margin:0 auto;
-	/* background-color:#b7f7cc; */
 }
 .index-header, .hotel-search-header{
 	background-color:#ffffff;
@@ -318,7 +341,6 @@ img {
 	position:relative;
 	
 	padding-top:55px;
-	/*! padding-bottom:3px; */
 	padding-left:316px;
 	padding-right:316px;
 		
@@ -344,11 +366,6 @@ img {
 	width:568px;
 	height:86px;
 	
-	padding-top:25px;
-	padding-bottom:25px;
-	padding-left:86px;
-	padding-right:82px;
-	
 	background-color:#766357;
 	color:#FFFFFF;
 }
@@ -361,22 +378,14 @@ img {
 	font-weight:bold;
 	color:inherit;
 	
+	padding-top:28px;
+	padding-bottom:25px;
+	padding-left:86px;
+	padding-right:82px;
 }
-.hotel-search-head a, .hotel-search-head p{
+.hotel-search-head a,.hotel-search-head p{
 	text-align:center;
-}
-.hotel-search-form{
-	box-sizing:border-box;
-	min-height: 395px;
-	width: 568px;
-	margin-left:auto;
-	margin-right:auto;
-	background-color:#ffffff;
-	color:#000000;
 
-	position: absolute;
-	top: 0;
-	display:none;
 }
 .index-footer{
 	min-height:593px;
@@ -607,32 +616,7 @@ img {
 	width:110px;
 	margin-right:6px;
 }
-.btn{
-	color:#ffffff;
-	font-weight:bold;
-	font-size:14px;
-	line-height:21px;
-	font-family:"PT Sans", "Arial", sans-serif;
-	text-transform:uppercase;
-	text-decoration:none;
-	
-	background-color:#000000;
-	border:none;
-	outline:none;
-	cursor:pointer;
-	
-	display:inline-block;
-	vertical-align:top;
-	text-align:center;
-	
-	box-sizing:border-box;
-	padding-top:3px;
-	padding-bottom:3px;
-	padding-left:15px;
-	padding-right:15px;
-	
-	margin-right:3px;
-}
+
 .detail{
 	width:110px;
 	height:27px;
@@ -689,5 +673,138 @@ img {
 }
 .rating-result{
 	margin-left:3px;
-	/*! -moz-animation: ; */
+
+}
+/* всплывающая форма поиска отеля на главной странице*/
+.hotel-search-form{
+	box-sizing:border-box;
+	min-height: 395px;
+	width: 568px;
+	margin-left:auto;
+	margin-right:auto;
+	padding:54px;
+
+	background-color:#ffffff;
+	color:#000000;
+	
+	position:absolute;
+	top:290px;
+	/* display:none; */
+	z-index: 5;
+}
+.hotel-search-form label,
+.hotel-search-form input{
+	font-family:'PT Sans', 'Arial', sans-serif;
+	text-transform:uppercase;
+	font-weight:bold;
+	font-size:14px;
+	line-height:26px;
+	color:#000000;
+}
+.form-item-row{
+	box-sizing:border-box;
+	margin-bottom:26px;
+	min-height:40px;
+	/*! outline:1px solid red; */
+	padding-left: 2px;
+	position:relative;
+	padding-top: 3px;
+}
+.form-item-label
+{
+	display:inline-block;
+	vertical-align:middle;
+	min-width:90px;
+	margin-right:18px;
+	/*! outline:1px solid blue; */
+}
+.form-amount-field{
+	display:inline-block;
+	vertical-align:middle;
+	box-sizing:border-box;
+	width:38px;
+	height:38px;
+	outline:none;
+	background-color:transparent;
+	text-align:center;
+	margin:0;
+	padding:0;
+}
+.calendar,
+.plus,
+.minus{
+	font-size:0;
+	outline:none;
+	display:inline-block;
+	vertical-align:middle;
+	box-sizing:border-box;
+	width:38px;
+	height:38px;
+	background-color:#f2f2f2;
+	text-align:center;
+	margin:0;
+	padding:0;
+}
+.form-item-rangeblock{
+	display:inline-block;
+	vertical-align:middle;
+	font-size:0;
+	background-color:#f2f2f2;
+	box-sizing:border-box;
+	width:114px;
+}
+.plus span,
+.minus span{
+	font-size:14px;
+	line-height:26px;
+	color:#a9a9a9;
+	vertical-align: middle;
+}
+.calendar span{
+	font-size:21px;
+	line-height:26px;
+	color:#a9a9a9;
+	vertical-align: middle;
+}
+.form-item-label-right{
+	text-align:right;
+	/*! padding-right: 0px; */
+}
+.form-date-field{
+	display:inline-block;
+	vertical-align:middle;
+	outline:none;
+	background-color:#f2f2f2;
+	box-sizing:border-box;
+	width:340px;
+	padding-left:10px;
+}
+.calendar{
+	position:absolute;
+	margin:0;
+	right:2px;
+}
+.form-find-btn{
+	box-sizing:border-box;
+	height:56px;
+	
+	background-color:#81b3d2;
+	color:#FFFFFF;
+	margin-top:55px;
+}
+.find-btn{
+	text-align:center;
+	display:block;
+	text-decoration:none;
+	
+	font-size:21px;
+	line-height:26px;
+	font-weight:bold;
+	background-color:inherit;
+	color:inherit;
+	
+	padding-top:14px;
+	/*! padding-bottom:3px; */
+	padding-left:196px;
+	/*! padding-right:81px; */
 }
