--- a/css/Style.css
+++ b/css/Style.css
@@ -468,31 +468,7 @@ img {
 	color:#000000;
 }
 /* Стили внутренней страницы */
-.search-form{
-	min-height:217px;
-	background-image:url("../img/hotel_search_background.jpg");
-	background-position:0 50%;
-	background-repeat:no-repeat;
-	background-color:#6a6e74;
-	color:#FFFFFF;
-	overflow:hidden;
-	Z-index:5;
-}
-.form-left-item{
-	box-sizing:border-box;
-	width:240px;
-	float:left;
-}
-.form-middle-item{
-	box-sizing:border-box;
-	width:288px;
-	float:left;
-}
-.form-right-item{
-	box-sizing:border-box;
-	width:328px;
-	float:right;
-}
+
 .search-result-header{
 	box-sizing:border-box;
 	min-height: 87px;
@@ -807,4 +783,98 @@ img {
 	/*! padding-bottom:3px; */
 	padding-left:196px;
 	/*! padding-right:81px; */
+}
+/* форма на внутренней */
+.search-form{
+	box-sizing:border-box;
+	min-height:217px;
+	background-image:url("../img/hotel_search_background.jpg");
+	background-position:0 50%;
+	background-repeat:no-repeat;
+	background-color:#6a6e74;
+	color:#ffffff;
+	overflow:hidden;
+	Z-index:5;
+	
+	font-family:'PT Sans', 'Arial', sans-serif;
+	font-weight:normal;
+	font-size:14px;
+	line-height:21px;
+	
+	padding-left:6%;
+	padding-right:6%;
+}
+.search-form form{
+	display:block;
+	width:100%;
+	height:100%;
+}
+.search-form-left-item{
+	box-sizing:border-box;
+	width:254px;
+	min-height:217px;
+	float:left;
+	outline:1px solid red;
+	padding-top:26px;
+	/*! padding-bottom:33px; */
+}
+.search-form-middle-item{
+	box-sizing:border-box;
+	width:288px;
+	min-height:217px;
+	float:left;
+	outline:1px solid red;
+	padding-top:26px;
+/* 	padding-bottom:33px; */
+}
+.search-form-right-item{
+	box-sizing:border-box;
+	width:328px;
+	min-height:217px;
+	float:right;
+	outline:1px solid red;
+	padding-top:26px;
+/* 	padding-bottom:33px; */
+}
+
+.search-form fieldset{
+	border:none;
+}
+.search-form-legend{
+	font-weight:bold;
+	font-size:16px;
+	line-height:21px;
+	margin-left:-10px;
+}
+.search-form-checkbox{
+	position:relative;
+	display:block;
+	cursor:pointer;
+}
+.search-form-checkbox input[type="checkbox"] + .checkbox-indicator {
+  position:absolute;
+  top:0px;
+  left:-10px;
+  width:17px;
+  height:17px;
+  border:2px solid #ffffff;
+  border-radius:5px;
+}
+.search-form-left-item label{
+	padding-left:29px;
+}
+.search-form-middle-item label{
+	padding-left:32px;
+}
+.search-form label:first-of-type{
+	margin-top:20px;
+}
+.search-form label:not(:first-of-type):not(:last-of-type){
+	margin-top:25px;
+}
+.search-form label:last-of-type{
+	margin-top:25px;
+}
+.search-form-checkbox input[type="checkbox"] {
+  display: none;
 }
