--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-	font-family:'PT Sans', 'Arial', sans-serif;
+	font-family:"PT Sans", "Arial", sans-serif;
 	font-weight:normal;
 	font-size:14px;
 	line-height:26px;
@@ -709,7 +709,7 @@ img {
 }
 .hotel-search-form label,
 .hotel-search-form input{
-	font-family:'PT Sans', 'Arial', sans-serif;
+	font-family:"PT Sans", "Arial", sans-serif;
 	text-transform:uppercase;
 	font-weight:bold;
 	font-size:14px;
@@ -855,7 +855,7 @@ img {
 	overflow:hidden;
 	Z-index:5;
 	
-	font-family:'PT Sans', 'Arial', sans-serif;
+	font-family:"PT Sans", "Arial", sans-serif;
 	font-weight:normal;
 	font-size:14px;
 	line-height:21px;
