--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ img {
 	font-weight:bold;
 	color:inherit;
 	
-	padding-top:28px;
+	padding-top:29px;
 	padding-bottom:25px;
 	padding-left:86px;
 	padding-right:82px;
@@ -550,7 +550,7 @@ img {
 	margin-left:29px;
 	color:#000000;
 	opacity:0.3;
-	text-decoration:underline;
+	border-bottom: 1px dotted #81b3d2;
 }
 .arrow{
 	display:inline-block;
@@ -743,6 +743,7 @@ img {
 	text-align:center;
 	margin:0;
 	padding:0;
+	border: none;
 }
 .calendar,
 .plus,
@@ -759,11 +760,13 @@ img {
 	margin:0;
 	padding:0;
 	cursor:pointer;
+	border: none;
 }
 .calendar{
 	position:absolute;
 	margin:0;
 	right:2px;
+	height: 35px;
 }
 .form-item-rangeblock{
 	display:inline-block;
@@ -807,7 +810,8 @@ img {
 	box-sizing:border-box;
 	width:340px;
 	height:35px;
-	padding-left:10px;
+	padding-left:12px;
+	border: none;
 }
 .form-date-field:hover{
 	background-color:#ebebeb;
@@ -818,7 +822,7 @@ img {
 }
 .form-find-btn{
 	box-sizing:border-box;
-	height:56px;
+	height:57px;
 	
 	background-color:#81b3d2;
 	color:#FFFFFF;
@@ -837,6 +841,8 @@ img {
 	
 	padding-top:14px;
 	padding-left:196px;
+	padding-right: 197px;
+	padding-bottom: 16px;
 }
 .form-find-btn:hover{
 	background-color:#669ec0;
