--- a/css/style.css
+++ b/css/style.css
@@ -422,6 +422,8 @@ img {
 	height:593px;
 	position: absolute;
 	bottom:0;
+	background-image:url("../img/map.jpg");
+	background-color:#cbdda9;
 }
 .footer-container{
 	background-color:#fdfdfd;
@@ -736,8 +738,19 @@ img {
 	
 	position:absolute;
 	top:290px;
-/* 	display:none; */
+	display:none;
 	z-index: 5;
+}
+.hotel-search-form-show{
+	display:block;
+	animation-name:bounce;
+	animation-duration:0.6s;
+}
+@keyframes bounce {
+	0%{transform: translateY(-800px);}
+	70%{transform: translateY(30px);}
+	90%{transform: translateY(-10px);}
+	100%{transform: translateY(0);}
 }
 .hotel-search-form label,
 .hotel-search-form input{
